[project]
name = "chageept"
version = "0.1.0"
description = "AI chatbot for CHAGEE Philippines - Hybrid RAG system for menu, stores, and promotions"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "CHAGEEPT Team" }
]
keywords = ["chatbot", "rag", "chagee", "fastapi", "qdrant", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "qdrant-client>=1.9.0",
    "python-dotenv>=1.0.0",
    "chainlit>=1.0.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/chageept"
Documentation = "https://github.com/yourusername/chageept#readme"
Repository = "https://github.com/yourusername/chageept"
Issues = "https://github.com/yourusername/chageept/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
